<resources>
    <string name="ko_app_name">KO GameBox</string>
    <string name="ko_image_description">This is a image!</string>
    <string name="ko_no_focus_tag">KO_NO_FOCUS</string>
    <string name="ko_imageview">imageview</string>
    <string name="ko_gamepad_connected">Game Pad %1$s is connected.</string>
    <string name="ko_gamepad_quited">Game Pad %1$s is disconnected.</string>
    <string name="ko_recommend">HOT</string>
    <string name="ko_category">CATEGORIES</string>
    <string name="ko_special">SERIES</string>
    <string name="ko_new_game">NEW</string>
    <string name="ko_my">MY CENTER</string>
    <string name="ko_me">me</string>
    <string name="ko_you">you</string>
    <string name="ko_waiting">Waiting…</string>
    <string name="ko_setting">SETTINGS</string>
    <string name="ko_game_details">Game Details</string>
    <string name="ko_online_time">Online:%1$s</string>
    <string name="ko_my_game">My Games</string>
    <string name="ko_my_game_head">Total%1$sGames</string>
    <string name="ko_game_manage">Game Manager</string>
    <string name="ko_my_hand">Gamepads</string>
    <string name="ko_more_setting">More Settings</string>
    <string name="ko_available_space">Free:%1$s</string>
    <string name="ko_storage_space">Storages</string>
    <string name="ko_storage_head">Total %1$s Storages</string>
    <string name="ko_local_storage">Local</string>
    <string name="ko_is_default_location">Default</string>
    <string name="ko_set_default_location">Set to default storage</string>
    <string name="ko_prompt">prompt</string>
    <string name="ko_set_default_location_succeed">Set default storage successfully！</string>
    <string name="ko_add_game_prompt">"For quick start，
add shortcut to “My Games“!"</string>
    <string name="ko_confirm_add">Add Now</string>
    <string name="ko_cancel_add">Next Time</string>
    <string name="ko_add_succeed">Add shortcut to “My Games“ successfully！</string>
    <string name="ko_press_quit">Press “quit“ again to quit</string>
    <string name="ko_data_error">Get data error!</string>
    <string name="ko_quit_prompt">Are you sure you want to quit?</string>
    <string name="ko_game_contact_info">Fans QQ Group:320086294 / Corperation:2629962501</string>
    <string name="ko_network_connect_fail">Network connection failed, please check your network！</string>
    <string name="ko_network_is_required_to_next_action">Network is required to do the next action！</string>
    <string name="ko_quit_prompt_hasdownload">Some of download tasks are not completed，are you sure you want to quit?</string>
    <string name="ko_quit_do_download">Quit but download still</string>
    <string name="ko_quit_app">Quit</string>
    <string name="ko_back">Back</string>
    <string name="ko_quit">Quit</string>
    <string name="ko_try_again">Try Again</string>
    <string name="ko_delete">Delete</string>
    <string name="ko_finish_game_download">%1$s download completed!</string>
    <string name="ko_finish_game_install">%1$s installation completed!</string>
    <string name="ko_install_game_fail">Installation failed！%1$s</string>
    <string name="ko_request_game_info_failed">Fail to get gamedata!(id=%1$s)</string>
    <string name="ko_press_any_key_to_enter">Press Any Key to skip</string>
    <string name="ko_loading_config">Loading Config···</string>
    <string name="ko_loading_images">Loading Images%1$s</string>
    <string name="ko_data_loading">Loading data,please wait…</string>
    <string name="ko_net_not_good_data_load_fail">Network error，fail to load data…</string>
    <string name="ko_no_net_data_load_fail">Network error，fail to load data…</string>
    <string name="ko_gamepad_game">Need Gamepad</string>
    <string name="ko_file_size">Size:%1$s</string>
    <string name="ko_no_memery">Available space of storage is not enough, please clean up the storage.</string>
    <string name="ko_cpu_not_enough">Your device may not be able to run the game smoothly.</string>
    <string name="ko_space_not_enough">(not enough)</string>
    <string name="ko_device_not_enough">Equipment performance deficiencies</string>
    <string name="ko_platform">Platform:%1$s</string>
    <string name="ko_gametype">Type:%1$s</string>
    <string name="ko_gamelang">Language:%1$s</string>
    <string name="ko_gameplaytype">Play Type:</string>
    <string name="ko_startapp">Start APP</string>
    <string name="ko_startgame">Start Game</string>
    <string name="ko_serachgame">Search Game</string>
    <string name="ko_canceldownload">Cancel Download</string>
    <string name="ko_wait_install">Waiting for Installing</string>
    <string name="ko_startinstall">Start to Install</string>
    <string name="ko_unzipping">Unzipping…</string>
    <string name="ko_installing">Installing…</string>
    <string name="ko_uninstalling">Uninstalling…</string>
    <string name="ko_wait_downloading">Waiting…</string>
    <string name="ko_downloading">Downloading</string>
    <string name="ko_cancelinstall">Cancel Install</string>
    <string name="ko_freespace">Available : %1$s</string>
    <string name="ko_install_space">Installing space needed:%1$s</string>
    <string name="ko_download_game_prompt">Cancel download “%1$s“？</string>
    <string name="ko_cancel">Cancel</string>
    <string name="ko_confirm">Confirm</string>
    <string name="ko_new_game_toast">New Game will be up soon!</string>
    <string name="ko_platform_apps">APPS</string>
    <string name="ko_installing_tips">%1$s is installing, wait for a moment please.</string>
    <string name="ko_map_dialog_tips">Tips</string>
    <string name="ko_map_dialog_content">Key Mapping is not completed,are you sure to end it?</string>
    <string name="ko_map_dialog_positive">Back</string>
    <string name="ko_map_dialog_neutral">Quit</string>
    <string name="ko_map_dialog_unpositive">Gamepad can not work</string>
    <string name="ko_map_pad_key">Key mapping</string>
    <string name="ko_map_tips_up">Please press the key</string>
    <string name="ko_map_tips_down">1/9</string>
    <string name="ko_map_tips_right_down">press menu button to call up advanced settings</string>
    <string name="ko_map_toast_upload_ok">Gamepad info reported, thanks！</string>
    <string name="ko_map_toast_map_tips">Please do Key-Mapping of this Gamepad，before you start the game.</string>
    <string name="ko_map_toast_map_upload">upload Key-Mapping!</string>
    <string name="ko_map_toast_map_upload_error" />
    <string name="ko_map_toast_map_upload_success">Upload the mapping to the server!</string>
    <string name="ko_map_toast_map_save_success">Key-Mapping success!</string>
    <string name="ko_map_toast_map_save_failed">Save Key-Mapping failed!</string>
    <string name="ko_restore_default_key">Restore Default Settings</string>
    <string name="ko_map_ok_up_tips">Key mapping is completed, enjoy your game!</string>
    <string name="ko_press_any_key_back_previous">Press any key to skip</string>
    <string name="ko_switch_to_lanscape_mode">Please switch your TV Remote to lanscape mode!</string>
    <string name="ko_map_wrong_game_pad">maping with wrong Gamepad?</string>
    <string name="ko_continue_game">Continue</string>
    <string name="ko_keymapping">Key-Mapping</string>
    <string name="ko_save_archive">Save Archive</string>
    <string name="ko_read_archive">Load Save</string>
    <string name="ko_advanced_setting">Advanced Setting</string>
    <string name="ko_quit_game">Quit</string>
    <string name="ko_image">image</string>
    <string name="ko_slot_nth">Slot %1$d</string>
    <string name="ko_invalid_path">Invalid file path!</string>
    <string name="ko_slot_empty">&lt;empty></string>
    <string name="ko_notarchive">No Archive</string>
    <string name="ko_save_slot">Save Game</string>
    <string name="ko_save_success">Save successed!</string>
    <string name="ko_load_success">Load successed!</string>
    <string name="ko_find_game_file">Search for games</string>
    <string name="ko_is_add_game">Add shortcut to “My Games“！</string>
    <string name="ko_not_support_game">Fail to run this game!</string>
    <string name="ko_no_game_file">No game file found!</string>
    <string name="ko_confirm_download">Confirm DownLoad</string>
    <string name="ko_auto_download">Auto Download</string>
    <string name="ko_download_btn_no_result">Nothing Found~</string>
    <string name="ko_default_download">Download first task by default</string>
    <string name="ko_task_add_succ">Add download task successfully!</string>
    <string name="ko_toast_space_not_enough">"Available space of storage is not enough, can not download!
We recommend that you connect an external storage device."</string>
    <string name="ko_modif_download_path">Change download path!</string>
    <string name="ko_cancel_download">Cancel</string>
    <string name="ko_continue_download">Continue</string>
    <string name="ko_game_task_exist">This game task is already exists!</string>
    <string name="ko_game_file_exist">This game task is already exists!</string>
    <string name="ko_download_no_result">Nothing Found!~Please search other games~</string>
    <string name="ko_my_game_pad">My Gamepads</string>
    <string name="ko_no_game_pad">No gamepads found</string>
    <string name="ko_please_use_usb_bluetooth_game_pad">Please connect an USB or Wireless Gamepad!</string>
    <string name="ko_please_use_virtual_game_pad">please connect KO Gamepad</string>
    <string name="ko_press_to_mapping_key">Click to start Keys-Mapping</string>
    <string name="ko_pls_change_mode_of_game_pad">Please change the mode of your Gamepad.</string>
    <string name="ko_please_download_connect_TV_GAMEPAD">Please download or connect KO Gamepad</string>
    <string name="ko_player">Player</string>
    <string name="ko_press_up_delete_gamepad_item">Long press \"up\" to disconnect</string>
    <string name="ko_no_mapping">Do not fit</string>
    <string name="ko_connected_to_ko_tv_pad">The KO Gamepad is connected</string>
    <string name="ko_game_pad_mode_not_support">"The Mode of this Gamepad (%1$s) is not supported, please change it's mode!"</string>
    <string name="ko_virtual_game_pad_can_not_remove">Please disconnect your GamePad!</string>
    <string name="ko_check_recommend_game_pad">Recommended handle can be purchased</string>
    <string name="ko_quick_response_code">Quick Response Code</string>
    <string name="ko_recommend_game_pad">Recommend Game pad</string>
    <string name="ko_click_for_buy">Check to buy</string>
    <string name="ko_recommend_text">Click on the two-dimensional code, immediately buy</string>
    <string name="ko_game_pad_supported_list">Supported Game Pad List</string>
    <string name="ko_setting_about_us">About Us</string>
    <string name="ko_setting_check_update">Check Update</string>
    <string name="ko_setting_copyright">Copyright</string>
    <string name="ko_setting_feedback">Feedback</string>
    <string name="ko_setting_feedback_other">Other Comments</string>
    <string name="ko_setting_feedback_other_hint">Please leave your valuable comments, We will actively adopts your comments and provide you with better services.</string>
    <string name="ko_setting_feedback_other_qrcode_hint">Scan QR code to leave comments with phone. QQ Group : 320086274</string>
    <string name="ko_setting_feedback_other_submint">Submit</string>
    <string name="ko_setting_confirm">Confirm</string>
    <string name="ko_setting_about_us_tag">About KOBox</string>
    <string name="ko_setting_about_us_title">KO GameBox</string>
    <string name="ko_setting_about_us_version">(Current Version : %s)</string>
    <string name="ko_setting_about_us_business_coop">Cooperation : 2629962501 (QQ)</string>
    <string name="ko_setting_about_us_qq_group">Fans Group : 320086294 (QQ)</string>
    <string name="ko_setting_about_us_official_website">Official Website : tv.vszone.cn</string>
</resources>