<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/font_size58px" android:textColor="@color/ko_font_dark_black_alpha60" android:gravity="center" android:background="@drawable/ko_grey_shape" android:paddingLeft="@dimen/prompt_dialog_title_padding_left_45px" android:paddingRight="@dimen/prompt_dialog_title_padding_right_45px" android:layout_width="wrap_content" android:layout_height="@dimen/prompt_dialog_title_height_90px" android:layout_marginTop="@dimen/pad_key_mapping_title_margin_top_60px" android:text="@string/ko_map_dialog_tips" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/prompt_dialog_margin_top_228px" android:layout_marginBottom="0.0px" android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
        <TextView android:textSize="@dimen/font_size72px" android:textStyle="bold" android:textColor="@color/ko_font_white" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/prompt_dialog_tv_margin_bottom_30px" android:text="@string/ko_map_dialog_content" style="@style/KoTextStyle" />
        <FrameLayout android:id="@id/pad_key_mapping_unfinished_dialog_cancel_container" android:background="@drawable/ko_pad_key_mapping_unfinished_button_container_selector" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/font_size64px" android:textStyle="bold" android:textColor="@drawable/ko_pad_key_mapping_unfinished_dialog_text_color_selector" android:gravity="center" android:id="@id/pad_key_mapping_unfinished_dialog_cancel_tv" android:background="@drawable/ko_pad_key_mapping_unfinished_dialog_button_selector" android:layout_width="@dimen/prompt_dialog_kobutton_width_882px" android:layout_height="@dimen/prompt_dialog_kobutton_height_150px" android:text="@string/ko_map_dialog_positive" style="@style/KoTextStyle" />
        </FrameLayout>
        <FrameLayout android:id="@id/pad_key_mapping_unfinished_dialog_finish_container" android:background="@drawable/ko_pad_key_mapping_unfinished_button_container_selector" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/key_mapping_advanced_setting_item_button_margin_f45px">
            <TextView android:textSize="@dimen/font_size64px" android:textStyle="bold" android:textColor="@drawable/ko_pad_key_mapping_unfinished_dialog_text_color_selector" android:gravity="center" android:id="@id/pad_key_mapping_unfinished_dialog_finish_tv" android:background="@drawable/ko_pad_key_mapping_unfinished_dialog_button_selector" android:visibility="visible" android:layout_width="@dimen/prompt_dialog_kobutton_width_882px" android:layout_height="@dimen/prompt_dialog_kobutton_height_150px" android:text="@string/ko_map_dialog_neutral" style="@style/KoTextStyle" />
        </FrameLayout>
        <FrameLayout android:id="@id/pad_key_mapping_unfinished_dialog_feedback_container" android:background="@drawable/ko_pad_key_mapping_unfinished_button_container_selector" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/key_mapping_advanced_setting_item_button_margin_f45px">
            <TextView android:textSize="@dimen/font_size64px" android:textStyle="bold" android:textColor="@drawable/ko_pad_key_mapping_unfinished_dialog_text_color_selector" android:gravity="center" android:id="@id/pad_key_mapping_unfinished_dialog_feedback_tv" android:background="@drawable/ko_pad_key_mapping_unfinished_dialog_button_selector" android:visibility="visible" android:layout_width="@dimen/prompt_dialog_kobutton_width_882px" android:layout_height="@dimen/prompt_dialog_kobutton_height_150px" android:text="@string/ko_map_dialog_unpositive" style="@style/KoTextStyle" />
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>