<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/font_size58px" android:textColor="@color/ko_dialog_title_black" android:gravity="center" android:layout_gravity="top|left|center" android:background="@drawable/ko_grey_shape" android:layout_width="@dimen/pad_key_mapping_title_width_453px" android:layout_height="@dimen/pad_key_mapping_title_height_91px" android:layout_marginTop="@dimen/pad_key_mapping_title_margin_top_60px" android:text="@string/ko_map_pad_key" style="@style/DarkerTextStyle" />
    <FrameLayout android:id="@id/pad_key_mapping_finished_content_framelayout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/pad_key_mapping_finished_iv" android:layout_width="@dimen/pad_key_mapping_finished_content_image_width_1168px" android:layout_height="@dimen/pad_key_mapping_finished_content_image_height_530px" android:layout_marginTop="@dimen/pad_key_mapping_finished_content_image_margin_top_376px" android:scaleType="centerInside" />
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pad_key_mapping_finished_content_text_margin_top_212px">
            <ImageView android:layout_width="@dimen/pad_key_mapping_finished_content_text_image_size_88px" android:layout_height="@dimen/pad_key_mapping_finished_content_text_image_size_88px" android:layout_marginRight="@dimen/pad_key_mapping_finished_middle_text_margin_left_26px" android:src="@drawable/ko_ico_set_game_hold_done_green" android:scaleType="centerInside" />
            <TextView android:textSize="@dimen/font_size72px" android:textColor="@color/ko_dialog_content_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ko_map_ok_up_tips" style="@style/WhiteTextStyle" />
        </LinearLayout>
        <TextView android:textSize="@dimen/font_size44px" android:textColor="@color/ko_dialog_content_white" android:layout_gravity="center_horizontal" android:id="@id/pad_key_mapping_finished_tv_gpad_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pad_key_mapping_finished_tv_gpad_name_margin_top_834px" android:text="device" android:singleLine="true" android:maxLength="12" style="@style/WhiteTextStyle" />
        <LinearLayout android:gravity="center" android:layout_gravity="bottom|right|center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/pad_key_mapping_finished_footer_margin_right_78px" android:layout_marginBottom="@dimen/pad_key_mapping_finished_footer_margin_bottom_80px">
            <TextView android:textSize="@dimen/font_size36px" android:textColor="@color/ko_dialog_footer_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ko_press_any_key_back_previous" style="@style/WhiteTextStyle" />
            <ImageView android:layout_width="@dimen/pad_key_mapping_finished_footer_image_margin_left_18px" android:layout_height="@dimen/pad_key_mapping_finished_footer_image_height_36px" android:layout_marginLeft="@dimen/pad_key_mapping_finished_footer_image_margin_left_18px" android:src="@drawable/ko_ico_footer_goon_40percent" android:scaleType="centerInside" />
        </LinearLayout>
    </FrameLayout>
</FrameLayout>