<?xml version="1.0" encoding="utf-8"?>
<cn.vszone.gamepad.android.FrameLayoutWrapper android:background="@drawable/ko_focus_selector" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/my_game_pad_item_bg" android:background="@drawable/ko_light_darker_grey" android:layout_width="@dimen/my_game_pad_item_width_382px" android:layout_height="@dimen/my_game_pad_item_height_548px">
        <TextView android:textSize="@dimen/font_size24px" android:textColor="@color/ko_font_white" android:gravity="center" android:id="@id/my_game_pad_item_tips" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/my_game_pad_item_margin_20px" android:text=" " style="@style/WhiteTextStyle" />
        <FrameLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/my_game_pad_item_pic" android:layout_width="fill_parent" android:layout_height="@dimen/my_game_pad_item_icon_height_340px" android:src="@drawable/ko_ico_my_gamepad_disable" android:scaleType="fitCenter" />
            <TextView android:textSize="@dimen/font_size32px" android:textColor="@color/ko_orange" android:layout_gravity="center_horizontal" android:id="@id/my_game_pad_item_no_mapping_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/my_game_pad_item_no_mapping_margin_top_220px" android:text="@string/ko_no_mapping" />
        </FrameLayout>
        <TextView android:textSize="@dimen/font_size26px" android:textColor="@color/ko_font_white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/my_game_pad_item_player" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/my_game_pad_item_margin_20px" android:singleLine="true" android:maxLength="12" style="@style/WhiteTextStyle" />
        <TextView android:textSize="@dimen/font_size36px" android:textColor="@color/ko_font_white" android:ellipsize="marquee" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/my_game_pad_item_pad_type" android:padding="0.0dip" android:layout_width="@dimen/my_game_pad_type_text_max_length_288px" android:layout_height="wrap_content" android:layout_marginTop="@dimen/my_game_pad_item_margin_16px" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" style="@style/WhiteTextStyle" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/my_game_pad_item_no_virtual_pad_bg" android:background="@drawable/ko_light_darker_grey" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/my_game_pad_item_height_548px">
        <TextView android:textSize="@dimen/font_size24px" android:textColor="@color/ko_font_white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/my_game_pad_item_margin_20px" android:text=" " style="@style/WhiteTextStyle" />
        <ImageView android:layout_gravity="center" android:id="@id/my_game_pad_list_item_virtual_no_pad_focused_imageview" android:layout_width="@dimen/my_game_pad_virtual_item_qr_imageview_width_870px" android:layout_height="@dimen/my_game_pad_virtual_item_qr_imageview_height_340px" android:src="@drawable/ko_ico_my_gamepad_disable_foc" android:scaleType="fitCenter" />
        <TextView android:textSize="@dimen/font_size26px" android:textColor="@color/ko_font_white" android:gravity="center" android:id="@id/my_game_pad_list_item_virtual_no_pad_focus_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/my_game_pad_item_margin_20px" android:text="@string/ko_please_download_connect_TV_GAMEPAD" style="@style/WhiteTextStyle" />
        <TextView android:textSize="@dimen/font_size36px" android:textColor="@color/ko_font_white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/my_game_pad_item_margin_16px" android:text="@string/ko_no_game_pad" style="@style/WhiteTextStyle" />
    </LinearLayout>
</cn.vszone.gamepad.android.FrameLayoutWrapper>